fixed modal width on small screens

--- a/scss/general/framelix-modal.scss
+++ b/scss/general/framelix-modal.scss
@@ -47,7 +47,7 @@
     box-shadow: rgba(0, 0, 0, 0.2) 2px 4px 13px;
     position: relative;
     display: flex;
-    max-width: 85vw;
+    max-width: 80vw;
     max-height: 90vh;
     width: 85vw;
     @include insertColorSelectors("framelix-modal-inner", "modal");
